feat: add documents sign and data validation-cron
